| Bug #16414 | Events: Crash or hang if event drops itself | ||
|---|---|---|---|
| Submitted: | 12 Jan 2006 4:03 | Modified: | 10 Feb 2006 20:31 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: SP | Severity: | S3 (Non-critical) |
| Version: | 5.1.6-alpha-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Andrey Hristov | Target Version: | |
[12 Jan 2006 4:03]
Peter Gulutzan
[30 Jan 2006 22:53]
Andrey Hristov
Currently locks, found the reason and fixed it. This was the problem that was locking also in disabled t/events . When doing shutdown server cores (asserts because a share was not freed).
[31 Jan 2006 11:08]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1930
[7 Feb 2006 18:30]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2266
[9 Feb 2006 21:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2407
[9 Feb 2006 21:50]
Andrey Hristov
Fixed in 5.1.7 - increased stability of the scheduler. Race conditions fixed.
[10 Feb 2006 20:31]
Paul DuBois
Bug appears only in unreleased code. No changelog entry needed.
