- fix for bug #16414 (Events: Crash or hang if event drops itself) WL#1034 (Internal CRON) (with post-review fix)